# weather-etl-bigquery-peter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.py  logger_config.py
dags/: weather_etl_dag.py
helpers/: schema.py  utils.py  weather_etl.py
tests/: test_config.py  test_etl.py  test_logger_config.py  test_utils.py
