[tool.poetry]
name = "dags"
version = "0.1.0"
description = "A poetry environment for a weather ETL Pipeline"
authors = ["Peter"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
python-decouple = "3.1"
pandas = "^2.2.3"
pendulum = ">=2.0.0,<2.1.0"
pytest-mock = "^3.14.0"
isort = ">=5.12.0,<5.13.0"
apache-airflow = "2.7.2"
sqlalchemy = "1.4.28"
google-cloud-bigquery = "^3.26.0"
db-dtypes = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
